Metadata attribution for TheTVDB

--- a/frontend/src/AddSeries/AddNewSeries/AddNewSeriesSearchResult.css
+++ b/frontend/src/AddSeries/AddNewSeries/AddNewSeriesSearchResult.css
@@ -33,7 +33,9 @@
 }
 
 .content {
+  display: flex;
   flex: 0 1 100%;
+  flex-direction: column;
   overflow: hidden;
 }
 
@@ -91,5 +93,9 @@
   .titleRow {
     justify-content: space-between;
     overflow: hidden;
+  }
+
+  .overview {
+    margin-bottom: 20px;
   }
 }
